[package]
name = "rust-editor"
version = "0.3.7"
edition = "2021"
repository = "https://github.com/alfazh123/RustEditor"
license = "MIT"
description = "A WebAssembly image processing built by Rust Langguage"
keywords = ["WebAssembly","Rust", "Image Processing"]

[lib]
crate-type = ["cdylib"]

[dependencies]
colors-transform = "0.2.11"
image = "0.25.6"
libm = "0.2.15"
wasm-bindgen = "0.2"